tests for remaining api dispatch methods